<resources>
    <string name="app_name">轻记账</string>
    <string name="action_charts">收支趋势</string>
    <string name="action_export">数据导出</string>
    <string name="action_import">数据导入</string>
    <string name="textView_type_name">类型</string>
    <string name="add_type">添加类型</string>
    <string name="edit_manageType">输入类型名称</string>
    <string name="manageType">类型管理</string>
    <string name="editText_money">金额</string>
    <string name="editText_note">备注</string>
    <string name="selectType">选择类型</string>
    <string name="query_name">查询结果</string>
</resources>
